- rotate some of the tool icons to reduce height of toolbox?
- anti-aliasing of valley path
- move DoubleSpinner to phetcommon

COMMON CODE:

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects


DONE:
******** 0.00.10 (20106)
3/3/08 - add Glacier.getLength
3/3/08 - change climate control ranges and defaults
3/3/08 - implement new ice thickness model (based on ELA interpolation)
3/3/08 - put temperate at top of climate control panel, it's the easiest to understand
3/3/08 - clean up climate ranges
2/29/08 - reset clock speed control when clock dt changes
2/29/08 - implement Reset All
2/29/08 - make thermometer display temperature in both C and F units
2/28/08 - turn off autoSort for time-related charts for performance reasons; sorted dataset will be provided
2/28/08 - bugfix: turn off autoSort for elevation-related graphs
2/28/08 - combine accumulation, ablation and glacial budget into 1 graph; delete individual graphs
2/28/08 - rename "ice flow" checkbox to "ice flow vectors"
2/28/08 - delete "snowfall" checkbox, snowfall should always be visible
2/27/08 - update "ELA v. time" graph every time the clock ticks (for discussion)
2/27/08 - add stubs for time-dependent graphs, until we figure out how we want these to work
2/27/08 - add a visual indication of origin for each measuring tool
******** 0.00.09 (20001)
2/27/08 - rename SnowfallAndTemperatureControlPanel to ClimateControlPanel
2/27/08 - "mass balance" control panel was dropped, delete panel and problematic model code
2/27/08 - "age of ice" feature was dropped, delete checkbox in View control panel 
2/27/08 - display a proxy for mountains, 1000 meters above valley floor
******** 0.00.08 (19964)
2/25/08 - disable "steady state" button when glacier is in the steady state
2/25/08 - add time-dependence to glacier ice thickness model